# panopticon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ProjectOptions.cmake  README.md
examples/: example_c.c  example_cpp.cpp
src/: main.c  main.cpp  panopticon.c  panopticon.h  timer.c  timer.h
